--- a/addActorModal.css
+++ b/addActorModal.css
@@ -32,8 +32,11 @@
 
 .itemOption{
 	margin: auto;
+	margin: 0 10px;
 	flex: 1;
 	text-align: center;
+	border: 2px solid transparent;
+	padding-bottom: 3px;
 }
 
 .itemOption.active {
@@ -43,6 +46,9 @@
 
 .itemImage{
 	height: 40px;
+	width: 20px;
+	margin: 5px auto;
+	background-color: #ebebeb;
 }
 
 .itemName{
