--- a/playerEditModal.css
+++ b/playerEditModal.css
@@ -143,3 +143,32 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+
+.modalSeperator{
+	width: 100%;
+	height: 2px;
+	background-color: #eee;
+	margin-bottom: 20px;
+}
+
+#deleteFrameContainer{
+	display: none;
+}
+
+.frameSelector{
+	display: flex;
+	justify-content: space-between;
+	margin-top: 20px;
+	margin-bottom: 40px;
+}
+
+.frameSelButton{
+	width: 40px;
+	height: 40px;
+}
+
+.frameSelText{
+	height: 40px;
+	line-height: 40px
+}
