--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,14 +1,20 @@
 *{
-  font-family: sans-serif;
+  font-family: "Arial", sans-serif;
   user-select: none;
+  padding: 0;
+  margin: 0;
 }
 
 *:focus{
   outline: none;
 }
 
+canvas{
+      display: block;
+}
 
 #canvasContainer{
+  touch-action: none;
   background: #ebebeb;
 }
 
