--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,10 +10,11 @@
 }
 
 canvas{
-      display: block;
+  display: block;
 }
 
 #canvasContainer{
+  height: 500px;
   touch-action: none;
   background: #ebebeb;
 }
@@ -36,7 +37,7 @@ canvas{
   position: absolute; 
   z-index: 1; /* Sit on top */
   width: inherit;
-  height: 607px;
+  height: 611px;
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
@@ -85,10 +86,10 @@ canvas{
 /*SIDE NAV*/
 /* The side navigation menu */
 .sidenav {
-  height: 547px;
-  width: 150px;
+  height: 551px;
+  width: 175px;
   top: -611px;
-  left: -150px;
+  left: -175px;
   position: relative;
   z-index: 2;
   background-color: #ebebeb;
@@ -127,6 +128,51 @@ canvas{
 
 #sideNavMenuCover{
   display: none;
+}
+
+.sideNavText{
+  display: inline-block;
+}
+
+.sideNavButton {
+  transition: color 0.05s !important;
+  margin-bottom: 7px;
+}
+
+.sideNavButton > i {
+  /*background: red;*/
+  width: 30px;
+}
+
+#sideNavSeperator{
+  width: 75%;
+  height: 2px;
+  background-color: #AAA;
+  margin: auto;
+  margin-top: 20px;
+}
+
+#sidenavSwitch{
+  margin-top: 25px;
+  float: none !important;
+  width: 100%;
+}
+
+#autoSave{
+    text-align: center;
+    padding: 0;
+    width: 70%;
+    margin: auto;
+}
+
+#autoSaveText{
+  font-size: 19px;
+  margin-top: 7px;
+}
+
+#sideNavSlider{
+  width: 55px;
+  margin-left: 58px;
 }
 
 /*Footer Buttons - Animation*/
@@ -188,8 +234,8 @@ canvas{
 }
 
 #pitchText{
-  margin-left: 25px;
-  margin-right: -20px;
+  margin-left: 20px;
+  /*margin-right: -20px;*/
   font-size: 22px;
 }
 
@@ -221,9 +267,14 @@ canvas{
   transition: color 0.1s;
 }
 
+
 .genButton:hover, .genButton:hover > *{
   transition: color 0.1s;
-    color: #f89300 !important;
+  color: #f89300 !important;
+}
+
+#saveFrameBut:disabled > *{
+  color:  #AAA !important;
 }
 
 .genButton:focus, .genButton:focus > *{
